Fix: pr#50 병합 과정에서 누락 및 잘못 병합된 부분 수정